fixed the cropped notification bar (#3344)

--- a/src/stylesheets/modules/entity_editor/index.styl
+++ b/src/stylesheets/modules/entity_editor/index.styl
@@ -30,7 +30,7 @@ Styleguide: 8.2
   padding: $rhythm(0.66) 2rem 0
   border-bottom: 1px solid #D0A2A0
   background: #FBE3E2
-  margin-top: - $rhythm(1)
+  margin-top: 0
   margin-bottom: $rhythm(1)
   color: $colors.red-dark
   p
